Refactor - Clean up package.json

--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
   "homepage": "https://nickon437.github.io/portfolio",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build --mode=production",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && gh-pages -d build",
-    "serve": "http-server ./build"
+    "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
